# ci-workflow-test

./: .gitignore  pyproject.toml
.github/actions/setup/: action.yml
.github/workflows/: ci.yml
project/: __init__.py
tests/: test_empty.py
